tests/diagnostics/slice_write_immutable.kal
# Writing through an immutable slice &[T] is an error (needs &mut [T]).
fn f(s: &[i64]) = { s[0] = 9; };
